--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     --first-shadow : rgba(0,0,0,0.1);
 
     --box-color : #fff;
-    --nav-color :  rgba(2, 124, 103);
+    --nav-color :  rgba(1, 79, 66, 0.675);
     --nav-icon: #000;
     --logo-color: #000;
 
@@ -320,7 +320,7 @@ i {
 .image img {
     width: 400px;
     height: 600px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .section {
@@ -546,7 +546,7 @@ i {
     content: "";
     position: absolute;
     bottom: -100%;
-    background: #027c67;
+    background: rgba(1, 79, 66, 0.675);
     width: 100%;
     height: 100%;
     transition: 0.4s;
