--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@
     --first-shadow : rgba(0,0,0,0.1);
 
     --box-color : #fff;
-    --nav-color :  rgba(1, 79, 66, 0.675);
+    --nav-color :  rgba(1, 79, 66, 0.796);
     --nav-icon: #000;
-    --logo-color: #000;
+    --logo-color: #027c67;
 
     --text-color : #027c67;
     --color-white : #242526;
@@ -37,12 +37,12 @@ body.dark {
     --body-color : #202425;
     --box-color : #fff;
 
-    --nav-color : #027c67;
+    --nav-color : rgba(1, 79, 66, 0.796);
     --color-white : #fff;
     --text-color : #fff;
 
     --nav-icon : #fff;
-    --logo-color : #fff;
+    --logo-color : #027c67;
     --icon-color : #fff;
     --mode-color : #fff;
 }
@@ -257,42 +257,16 @@ i {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--logo-color);
     width: 40px;
     height: 40px;
-    color: var(--icon-color);
     border-radius: 50%;
     box-shadow: 0px 1px 5px 3px #027c67;
     cursor: pointer;
 }
 
-
-.icon-circle {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    animation: iconSlide 4s infinite alternate;
-}
-
-@keyframes iconSlide {
-    25% {
-        border: 2px solid #e6d12e;
-        left: 70px;
-    }
-    50% {
-        border: 2px solid #c40101;
-        left: 140px;
-    }
-    75% {
-        border: 2px solid #8749f2;
-        left: 216px;
-    }
-    100% {
-        border: 2px solid #47ea15;
-        left: 300px;
-
-    }
+.social-icons .icons i{
+    color: var(--logo-color);
 }
 
 .social-icons:hover .icon-circle {
@@ -546,7 +520,7 @@ i {
     content: "";
     position: absolute;
     bottom: -100%;
-    background: rgba(1, 79, 66, 0.675);
+    background: rgba(1, 79, 66, 0.201);
     width: 100%;
     height: 100%;
     transition: 0.4s;
@@ -706,8 +680,9 @@ footer {
 .footer-social-icons { 
     display: flex;
     gap: 30px;
-    color: var(--color-white);
+    color: var(--logo-color);
 }
+
 
 .bottom-footer {
     font-size: 14px;
