--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700&display=swap');
 
 * {
@@ -18,7 +19,7 @@
     --first-shadow : rgba(0,0,0,0.1);
 
     --box-color : #fff;
-    --nav-color :  #6f0000ce;
+    --nav-color :  #212f48c0;
     --nav-icon: #000;
     --logo-color: #fff;
 
@@ -30,10 +31,10 @@
 }
 
 body {
-    background: #200122;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #6f0000, #200122);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6f0000, #200122); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background: #141E30;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 body.dark {
@@ -77,6 +78,7 @@ nav {
 }
 
 .nav-name {
+    font-family: 'Cinzel', serif;
     font-size: 30px;
     font-weight: 600;
     color: #fff;
@@ -194,6 +196,11 @@ body.dark #moon {
     color: var(--text-color);
 }
 
+.hello p {
+    font-family: 'Cinzel', serif;
+    font-weight: 700;
+}
+
 .featured-name {
     font-size: 50px;
     font-weight: 600;
@@ -225,7 +232,7 @@ body.dark #moon {
 
 .text-btn .btn {
     border: none;
-    color: #6f0000;
+    color: #243B55;
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.1);
 }
 
@@ -238,6 +245,11 @@ body.dark #moon {
     background: var(--body-color);
     font-weight: 500;
     transition: all 0.5s ease;
+}
+
+.btn:hover{
+    background: #212f48c0;
+    color: #fff;
 }
 
 
@@ -381,10 +393,15 @@ i {
     border: none;
     border-radius: 20px;
     background: var(--text-color);
-    color: #6f0000;
+    color: #242526;
     margin-top: 20px;
     font-weight: 500;
     transition: all 0.5s ease;
+}
+
+.about-me-btn:hover{
+    background: #212f48c0;
+    color: #fff;
 }
 
 .skill {
@@ -523,11 +540,12 @@ i {
     content: "";
     position: absolute;
     bottom: -100%;
-    background: rgba(1, 79, 66, 0.201);
+    background: #2939578b;
     width: 100%;
     height: 100%;
     transition: 0.4s;
     z-index: 0.1;
+    color: #fff;
 }
 
 .project-box:hover.project-box::after,
@@ -535,6 +553,7 @@ i {
     bottom: 0;
 }
 
+.project-box:hover.project-box p,
 .project-box:hover.project-box i,
 .project-box:hover.project-box > h3,
 .project-box:hover.project-box > label {
@@ -792,11 +811,22 @@ footer {
         align-items: center;
     }
     .project-box {
-        width: 80%;
-        display: flex;
-        align-items: baseline;
-        justify-content: center;
+        font-size: 11px;
     }
+
+    .project-box h3 {
+        text-align: center;
+    }
+
+    .project-box label {
+        font-size: 12px;
+    }
+
+    .project-box p {
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
     .mode {
         display: flex;
         align-items: center;
