--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
 
 body.dark {
     --body-color : #202425;
-    --box-color : #fff;
+    --box-color : #000;
 
     --nav-color : rgba(1, 79, 66, 0.796);
     --color-white : #fff;
