--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ i {
     position: relative;
     display: block;
     height: 100%;
-    width: 90%;
+    width: 100%;
     border-radius: 6px;
     background: var(--text-color);
     animation: progress 0.4s ease-in-out forwards;
@@ -451,22 +451,37 @@ i {
     animation-delay: 0.1s;
     width: 80%;
 }
-
 .skill-per.css {
     animation-delay: 0.1s;
-    width: 80%;
+    width: 95%;
 }
 .skill-per.python {
     animation-delay: 0.1s;
-    width: 70%;
+    width: 90%;
 }
 .skill-per.javascript {
     animation-delay: 0.1s;
-    width: 40%;
+    width: 80%;
+}
+.skill-per.java{
+    animation-delay: 0.1s;
+    width: 70%;
+}
+.skill-per.react{
+    animation-delay: 0.1s;
+    width: 70%;
+}
+.skill-per.sql{
+    animation-delay: 0.1s;
+    width: 85%;
+}
+.skill-per.pytorch{
+    animation-delay: 0.1s;
+    width: 60%;
 }
 .skill-per.php {
     animation-delay: 0.1s;
-    width: 40%;
+    width: 50%;
 }
 
 @keyframes progress {
@@ -501,6 +516,32 @@ i {
     flex-wrap: wrap;
 }
 
+.main-project-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.main-project-box{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    background: transparent;
+    border: 2px solid var(--text-color);
+    border-radius: 20px;
+    box-shadow: 1px 8px 10px 2px var(--first-shadow);
+    overflow: hidden;
+    cursor: pointer;
+    color: var(--logo-color);
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .project-box {
     position: relative;
     display: flex;
@@ -523,6 +564,44 @@ i {
     padding-top: 10px;
     margin-left: 60px;
     margin-right: 60px;
+}
+
+.main-project-box p {
+    text-align: center;
+    padding-top: 10px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.main-project-box img{
+    height: 300px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    width: -webkit-fill-available;
+}
+
+.main-project-box a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.main-project-box h3{
+    padding-top: 2px;
+}
+
+.project-btn{
+    margin-bottom: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    
+}
+
+.project-btn button{
+    padding: 5px;
+    transition: all .3s ;
+    border-radius: 5px;
+    background-color: #fff;
 }
 
 .project-box > i {
@@ -823,6 +902,14 @@ footer {
         justify-content: center;
         align-items: center;
     }
+
+    .main-project-container{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
     .project-box {
         font-size: 11px;
     }
