--- a/style.css
+++ b/style.css
@@ -31,15 +31,16 @@
 }
 
 body {
-    background: #141E30;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #03060c;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #01060d, #03060b);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3e5267, #00040a); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
+
 
 }
 
 body.dark {
-    --body-color : #202425;
-    --box-color : #000;
+    --body-color: #202425;
+    --box-color: #000;
 
     --nav-color : rgba(1, 79, 66, 0.796);
     --color-white : #fff;
@@ -50,6 +51,8 @@ body.dark {
     --icon-color : #fff;
     --mode-color : #fff;
 }
+
+
 
 .container {
     width: 100%;
@@ -175,6 +178,8 @@ body.dark #moon {
     display: flex;
     height: 100vh;
     min-height: 700px;
+    background-image: url(/bailey-alexander-Cka9FLcS848-unsplash.jpg);
+    background: ;
 }
 
 .featured-text {
