--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 body {
     background: #03060c;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #01060d, #03060b);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #3e5267, #00040a); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
+background: linear-gradient(to right, #3e5267, #00040a);
 
 
 }
@@ -178,8 +178,6 @@ body.dark #moon {
     display: flex;
     height: 100vh;
     min-height: 700px;
-    background-image: url(/bailey-alexander-Cka9FLcS848-unsplash.jpg);
-    background: ;
 }
 
 .featured-text {
